# xf86-video-rpi

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  build.sh  configure.ac  libtool  rpi_video.c  rpi_video.h
config/: 1-modules.conf  rpi.conf
src/: Makefile.am  rpi_video.c  rpi_video.h
supplemental/: README
supplemental/pkg-config/: bcm_host.pc  egl.pc  glesv2.pc
supplemental/xorg.conf.d/: rpi.conf
supplemental/xserver/: setup_build.sh
